--- a/index.html
+++ b/index.html
@@ -69,12 +69,21 @@
     </div>
 
     <footer>
-      Feito durante o aprendizado de HTML<i
-        class="devicon-html5-plain colored"
-      ></i
-      >, CSS<i class="devicon-css3-plain colored"></i> e JavaScript
-      <i class="devicon-javascript-plain colored"></i>
-      do curso
+      Feito durante o aprendizado de HTML5
+      <img
+        height="18"
+        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
+      />, CSS3
+      <img
+        height="18"
+        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
+      />
+      e JavaScript
+      <img
+        height="18"
+        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+      />
+      pelo curso
       <a href="https://app.rocketseat.com.br/devlinks" target="_blank"
         >DevLinks</a
       >
