--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </li>
         <li>
           <a href="https://github.com/maykbrito" target="_blank"
-            >Instrutor Mayk Brito</a
+            >Educador - Mayk Brito</a
           >
         </li>
       </ul>
