--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         height="18"
         src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
       />
-      pelo curso
+      oferecido pelo curso
       <a href="https://app.rocketseat.com.br/devlinks" target="_blank"
         >DevLinks</a
       >
