--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
       <img
         height="18"
         src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
-      />
-      oferecido pelo curso
+      />, oferecido pelo curso
       <a href="https://app.rocketseat.com.br/devlinks" target="_blank"
         >DevLinks</a
       >
