--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
       </ul>
       <div id="social-links">
         <a href="https://github.com/fefoliveira" target="_blank">
-          <ion-icon name="logo-github"></ion-icon>
+          <ion-icon name="meu-github"></ion-icon>
         </a>
         <a
           href="https://www.linkedin.com/in/fernandooliveiraa/"
           target="_blank"
         >
-          <ion-icon name="logo-linkedin"></ion-icon>
+          <ion-icon name="meu-linkedin"></ion-icon>
         </a>
       </div>
     </div>
